make the average color slightly transparent

--- a/themes/ios-themes.yaml
+++ b/themes/ios-themes.yaml
@@ -67,7 +67,7 @@ ios-light-mode-dark-green:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3D6B56"
+  app-header-background-color: rgba(61, 107, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -140,7 +140,7 @@ ios-light-mode-dark-green-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3D6B56"
+  app-header-background-color: rgba(61, 107, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -213,7 +213,7 @@ ios-dark-mode-dark-green:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3D6B56"
+  app-header-background-color: rgba(61, 107, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -286,7 +286,7 @@ ios-dark-mode-dark-green-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3D6B56"
+  app-header-background-color: rgba(61, 107, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -359,7 +359,7 @@ ios-light-mode-light-blue:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#0185A2"
+  app-header-background-color: rgba(1, 133, 162, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -432,7 +432,7 @@ ios-light-mode-light-blue-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#0185A2"
+  app-header-background-color: rgba(1, 133, 162, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -505,7 +505,7 @@ ios-dark-mode-light-blue:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#0185A2"
+  app-header-background-color: rgba(1, 133, 162, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -578,7 +578,7 @@ ios-dark-mode-light-blue-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#0185A2"
+  app-header-background-color: rgba(1, 133, 162, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -651,7 +651,7 @@ ios-light-mode-light-green:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#74B88B"
+  app-header-background-color: rgba(116, 184, 139, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -724,7 +724,7 @@ ios-light-mode-light-green-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#74B88B"
+  app-header-background-color: rgba(116, 184, 139, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -797,7 +797,7 @@ ios-dark-mode-light-green:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#74B88B"
+  app-header-background-color: rgba(116, 184, 139, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -870,7 +870,7 @@ ios-dark-mode-light-green-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#74B88B"
+  app-header-background-color: rgba(116, 184, 139, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -943,7 +943,7 @@ ios-light-mode-orange:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#FEBE56"
+  app-header-background-color: rgba(254, 190, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1016,7 +1016,7 @@ ios-light-mode-orange-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#FEBE56"
+  app-header-background-color: rgba(254, 190, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1089,7 +1089,7 @@ ios-dark-mode-orange:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#FEBE56"
+  app-header-background-color: rgba(254, 190, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1162,7 +1162,7 @@ ios-dark-mode-orange-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#FEBE56"
+  app-header-background-color: rgba(254, 190, 86, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1235,7 +1235,7 @@ ios-light-mode-blue-red:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3F244B"
+  app-header-background-color: rgba(63, 36, 75, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1308,7 +1308,7 @@ ios-light-mode-blue-red-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3F244B"
+  app-header-background-color: rgba(63, 36, 75, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1381,7 +1381,7 @@ ios-dark-mode-blue-red:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3F244B"
+  app-header-background-color: rgba(63, 36, 75, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1454,7 +1454,7 @@ ios-dark-mode-blue-red-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#3F244B"
+  app-header-background-color: rgba(63, 36, 75, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1527,7 +1527,7 @@ ios-light-mode-red:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#F98161"
+  app-header-background-color: rgba(249, 129, 97, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1600,7 +1600,7 @@ ios-light-mode-red-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#F98161"
+  app-header-background-color: rgba(249, 129, 97, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1673,7 +1673,7 @@ ios-dark-mode-red:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#F98161"
+  app-header-background-color: rgba(249, 129, 97, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1746,7 +1746,7 @@ ios-dark-mode-red-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#F98161"
+  app-header-background-color: rgba(249, 129, 97, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1819,7 +1819,7 @@ ios-light-mode-dark-blue:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#7681A7"
+  app-header-background-color: rgba(118, 129, 167, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1892,7 +1892,7 @@ ios-light-mode-dark-blue-alternative:
   paper-item-icon-color: "#333333"  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(230, 230, 230, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#7681A7"
+  app-header-background-color: rgba(118, 129, 167, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1965,7 +1965,7 @@ ios-dark-mode-dark-blue:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#7681A7"
+  app-header-background-color: rgba(118, 129, 167, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -2038,7 +2038,7 @@ ios-dark-mode-dark-blue-alternative:
   paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
-  app-header-background-color: "#7681A7"
+  app-header-background-color: rgba(118, 129, 167, 0.8)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
