fix --markdown-code-background-color, see https://github.com/home-assistant/frontend/pull/5904

--- a/settings-light-dark.yaml
+++ b/settings-light-dark.yaml
@@ -49,3 +49,6 @@ state_icon_active_color:
 switch_checked_track_color:
   dark: '#30d158'
   light: '#34c759'
+markdown_code_background_color:
+  dark: '#464646'
+  light: '#FFFFFF'
