--- a/manual-install/ios-themes.yaml
+++ b/manual-install/ios-themes.yaml
@@ -69,6 +69,7 @@ ios-light-mode-dark-green-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(61, 107, 86, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -143,6 +144,7 @@ ios-light-mode-dark-green:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(61, 107, 86, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -217,6 +219,7 @@ ios-dark-mode-dark-green-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(61, 107, 86, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -291,6 +294,7 @@ ios-dark-mode-dark-green:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(61, 107, 86, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -365,6 +369,7 @@ ios-light-mode-light-blue-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(1, 133, 162, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -439,6 +444,7 @@ ios-light-mode-light-blue:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(1, 133, 162, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -513,6 +519,7 @@ ios-dark-mode-light-blue-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(1, 133, 162, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -587,6 +594,7 @@ ios-dark-mode-light-blue:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(1, 133, 162, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -661,6 +669,7 @@ ios-light-mode-light-green-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(116, 184, 139, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -735,6 +744,7 @@ ios-light-mode-light-green:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(116, 184, 139, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -809,6 +819,7 @@ ios-dark-mode-light-green-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(116, 184, 139, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -883,6 +894,7 @@ ios-dark-mode-light-green:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(116, 184, 139, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -957,6 +969,7 @@ ios-light-mode-orange-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(254, 190, 86, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1031,6 +1044,7 @@ ios-light-mode-orange:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(254, 190, 86, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1105,6 +1119,7 @@ ios-dark-mode-orange-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(254, 190, 86, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1179,6 +1194,7 @@ ios-dark-mode-orange:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(254, 190, 86, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1253,6 +1269,7 @@ ios-light-mode-blue-red-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(63, 36, 75, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1327,6 +1344,7 @@ ios-light-mode-blue-red:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(63, 36, 75, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1401,6 +1419,7 @@ ios-dark-mode-blue-red-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(63, 36, 75, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1475,6 +1494,7 @@ ios-dark-mode-blue-red:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(63, 36, 75, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1549,6 +1569,7 @@ ios-light-mode-red-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(249, 129, 97, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1623,6 +1644,7 @@ ios-light-mode-red:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(249, 129, 97, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1697,6 +1719,7 @@ ios-dark-mode-red-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(249, 129, 97, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1771,6 +1794,7 @@ ios-dark-mode-red:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(249, 129, 97, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1845,6 +1869,7 @@ ios-light-mode-dark-blue-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(118, 129, 167, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1919,6 +1944,7 @@ ios-light-mode-dark-blue:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(118, 129, 167, 0.8)
   markdown-code-background-color: "#FFFFFF"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -1993,6 +2019,7 @@ ios-dark-mode-dark-blue-alternative:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(118, 129, 167, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
@@ -2067,6 +2094,7 @@ ios-dark-mode-dark-blue:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: rgba(118, 129, 167, 0.8)
   markdown-code-background-color: "#464646"
+  code-editor-background-color: var(--disabled-text-color)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
